<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/waterfallsmall">

    <ImageView android:src="@drawable/main_header_selector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/showernow2"
                   android:layout_width="wrap_content"
                   android:layout_height="72dp"
                   android:layout_marginBottom="24dp"
                   android:layout_gravity="center_horizontal" />

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#FFFFFF"
            android:theme="@style/Theme.App.Base"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/signup_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#FFFFFF"

                      android:inputType="textCapWords"
                      android:textColorHint="#FFFFFF"
                      android:textColorHighlight="#FFFFFF"
                      android:hint="Name" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#FFFFFF"
            android:theme="@style/Theme.App.Base"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/signup_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#FFFFFF"
                      android:inputType="textEmailAddress"
                      android:hint="@string/Email"
                      android:textColorHighlight="#FFFFFF"
                      android:textColorHint="#FFFFFF"  />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:theme="@style/Theme.App.Base"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/signup_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#FFFFFF"
                      android:inputType="textPassword"
                      android:textColorHighlight="#FFFFFF"
                      android:textColorHint="#FFFFFF"
                      android:hint="@string/Password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#FFFFFF"
            android:background="@drawable/ripple_effect"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            android:padding="16dp"
            android:text="@string/createAccount"
            android:textStyle="bold"/>

        <TextView android:id="@+id/loginActivity"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/LoginLable"
                  android:gravity="center"
                  android:textColor="#FFFFFF"
                  android:textSize="20sp"/>

        <TextView android:id="@+id/datacaution"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:text="@string/dataWarning"
                  android:textColor="#FFFFFF"
                  android:gravity="center"
                  android:textSize="20sp"/>


    </LinearLayout>
</FrameLayout>